--- a/3Mongo/ExerciceKickStarter.ipynb
+++ b/3Mongo/ExerciceKickStarter.ipynb
@@ -24,8 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T13:42:15.513173200Z",
+     "start_time": "2023-12-05T13:42:12.713207700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -34,8 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T13:42:20.111310900Z",
+     "start_time": "2023-12-05T13:42:20.004836200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "client = pymongo.MongoClient()\n",
@@ -45,175 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T13:42:23.186053900Z",
+     "start_time": "2023-12-05T13:42:22.722265900Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/raphael/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2698: DtypeWarning: Columns (6,8,10,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+      "C:\\Users\\march\\AppData\\Local\\Temp\\ipykernel_14484\\2083226100.py:1: DtypeWarning: Columns (6,8,10,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_ks = pd.read_csv(\"./data/ks-projects-201801-sample.csv\")\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>name</th>\n",
-       "      <th>category</th>\n",
-       "      <th>main_category</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>deadline</th>\n",
-       "      <th>goal</th>\n",
-       "      <th>launched</th>\n",
-       "      <th>pledged</th>\n",
-       "      <th>state</th>\n",
-       "      <th>backers</th>\n",
-       "      <th>country</th>\n",
-       "      <th>usd pledged</th>\n",
-       "      <th>usd_pledged_real</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>872782264</td>\n",
-       "      <td>Scott Cooper's Solo CD \"A Leg Trick\" (Canceled)</td>\n",
-       "      <td>Rock</td>\n",
-       "      <td>Music</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2011-09-16</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>2011-08-17 06:31:31</td>\n",
-       "      <td>1145</td>\n",
-       "      <td>canceled</td>\n",
-       "      <td>24</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1145</td>\n",
-       "      <td>1145.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1326492673</td>\n",
-       "      <td>Ohceola jewelry</td>\n",
-       "      <td>Fashion</td>\n",
-       "      <td>Fashion</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2012-08-22</td>\n",
-       "      <td>18000</td>\n",
-       "      <td>2012-07-23 20:46:48</td>\n",
-       "      <td>1851</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>28</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1851</td>\n",
-       "      <td>1851.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1688410639</td>\n",
-       "      <td>Sluff Off &amp; Harald: Two latest EGGs are Classi...</td>\n",
-       "      <td>Tabletop Games</td>\n",
-       "      <td>Games</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2016-07-19</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>2016-07-01 21:55:54</td>\n",
-       "      <td>7534</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>254</td>\n",
-       "      <td>US</td>\n",
-       "      <td>3796</td>\n",
-       "      <td>7534.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>156812982</td>\n",
-       "      <td>SketchPlanner: Create and Plan- all in one bea...</td>\n",
-       "      <td>Art Books</td>\n",
-       "      <td>Publishing</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2017-09-27</td>\n",
-       "      <td>13000</td>\n",
-       "      <td>2017-08-28 15:47:02</td>\n",
-       "      <td>16298</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>367</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2670</td>\n",
-       "      <td>16298.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1835968190</td>\n",
-       "      <td>Proven sales with custom motorcycle accessories</td>\n",
-       "      <td>Sculpture</td>\n",
-       "      <td>Art</td>\n",
-       "      <td>CAD</td>\n",
-       "      <td>2016-02-24</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>2016-01-25 17:37:10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>1</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>0.708148</td>\n",
-       "      <td>0.738225</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           ID                                               name  \\\n",
-       "0   872782264    Scott Cooper's Solo CD \"A Leg Trick\" (Canceled)   \n",
-       "1  1326492673                                    Ohceola jewelry   \n",
-       "2  1688410639  Sluff Off & Harald: Two latest EGGs are Classi...   \n",
-       "3   156812982  SketchPlanner: Create and Plan- all in one bea...   \n",
-       "4  1835968190    Proven sales with custom motorcycle accessories   \n",
-       "\n",
-       "         category main_category currency    deadline   goal  \\\n",
-       "0            Rock         Music      USD  2011-09-16   2000   \n",
-       "1         Fashion       Fashion      USD  2012-08-22  18000   \n",
-       "2  Tabletop Games         Games      USD  2016-07-19   2000   \n",
-       "3       Art Books    Publishing      USD  2017-09-27  13000   \n",
-       "4       Sculpture           Art      CAD  2016-02-24   5000   \n",
-       "\n",
-       "              launched pledged       state backers country usd pledged  \\\n",
-       "0  2011-08-17 06:31:31    1145    canceled      24      US        1145   \n",
-       "1  2012-07-23 20:46:48    1851      failed      28      US        1851   \n",
-       "2  2016-07-01 21:55:54    7534  successful     254      US        3796   \n",
-       "3  2017-08-28 15:47:02   16298  successful     367      US        2670   \n",
-       "4  2016-01-25 17:37:10       1      failed       1      CA    0.708148   \n",
-       "\n",
-       "   usd_pledged_real  \n",
-       "0       1145.000000  \n",
-       "1       1851.000000  \n",
-       "2       7534.000000  \n",
-       "3      16298.000000  \n",
-       "4          0.738225  "
-      ]
+      "text/plain": "           ID                                               name  \\\n0   872782264    Scott Cooper's Solo CD \"A Leg Trick\" (Canceled)   \n1  1326492673                                    Ohceola jewelry   \n2  1688410639  Sluff Off & Harald: Two latest EGGs are Classi...   \n3   156812982  SketchPlanner: Create and Plan- all in one bea...   \n4  1835968190    Proven sales with custom motorcycle accessories   \n\n         category main_category currency    deadline     goal  \\\n0            Rock         Music      USD  2011-09-16   2000.0   \n1         Fashion       Fashion      USD  2012-08-22  18000.0   \n2  Tabletop Games         Games      USD  2016-07-19   2000.0   \n3       Art Books    Publishing      USD  2017-09-27  13000.0   \n4       Sculpture           Art      CAD  2016-02-24   5000.0   \n\n              launched  pledged       state backers country usd pledged  \\\n0  2011-08-17 06:31:31   1145.0    canceled      24      US      1145.0   \n1  2012-07-23 20:46:48   1851.0      failed      28      US      1851.0   \n2  2016-07-01 21:55:54   7534.0  successful     254      US      3796.0   \n3  2017-08-28 15:47:02  16298.0  successful     367      US      2670.0   \n4  2016-01-25 17:37:10      1.0      failed       1      CA    0.708148   \n\n   usd_pledged_real  \n0       1145.000000  \n1       1851.000000  \n2       7534.000000  \n3      16298.000000  \n4          0.738225  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>name</th>\n      <th>category</th>\n      <th>main_category</th>\n      <th>currency</th>\n      <th>deadline</th>\n      <th>goal</th>\n      <th>launched</th>\n      <th>pledged</th>\n      <th>state</th>\n      <th>backers</th>\n      <th>country</th>\n      <th>usd pledged</th>\n      <th>usd_pledged_real</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>872782264</td>\n      <td>Scott Cooper's Solo CD \"A Leg Trick\" (Canceled)</td>\n      <td>Rock</td>\n      <td>Music</td>\n      <td>USD</td>\n      <td>2011-09-16</td>\n      <td>2000.0</td>\n      <td>2011-08-17 06:31:31</td>\n      <td>1145.0</td>\n      <td>canceled</td>\n      <td>24</td>\n      <td>US</td>\n      <td>1145.0</td>\n      <td>1145.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1326492673</td>\n      <td>Ohceola jewelry</td>\n      <td>Fashion</td>\n      <td>Fashion</td>\n      <td>USD</td>\n      <td>2012-08-22</td>\n      <td>18000.0</td>\n      <td>2012-07-23 20:46:48</td>\n      <td>1851.0</td>\n      <td>failed</td>\n      <td>28</td>\n      <td>US</td>\n      <td>1851.0</td>\n      <td>1851.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1688410639</td>\n      <td>Sluff Off &amp; Harald: Two latest EGGs are Classi...</td>\n      <td>Tabletop Games</td>\n      <td>Games</td>\n      <td>USD</td>\n      <td>2016-07-19</td>\n      <td>2000.0</td>\n      <td>2016-07-01 21:55:54</td>\n      <td>7534.0</td>\n      <td>successful</td>\n      <td>254</td>\n      <td>US</td>\n      <td>3796.0</td>\n      <td>7534.000000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>156812982</td>\n      <td>SketchPlanner: Create and Plan- all in one bea...</td>\n      <td>Art Books</td>\n      <td>Publishing</td>\n      <td>USD</td>\n      <td>2017-09-27</td>\n      <td>13000.0</td>\n      <td>2017-08-28 15:47:02</td>\n      <td>16298.0</td>\n      <td>successful</td>\n      <td>367</td>\n      <td>US</td>\n      <td>2670.0</td>\n      <td>16298.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1835968190</td>\n      <td>Proven sales with custom motorcycle accessories</td>\n      <td>Sculpture</td>\n      <td>Art</td>\n      <td>CAD</td>\n      <td>2016-02-24</td>\n      <td>5000.0</td>\n      <td>2016-01-25 17:37:10</td>\n      <td>1.0</td>\n      <td>failed</td>\n      <td>1</td>\n      <td>CA</td>\n      <td>0.708148</td>\n      <td>0.738225</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,16 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T13:43:05.913893500Z",
+     "start_time": "2023-12-05T13:43:05.907678200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Index(['goal', 'pledged', 'backers', 'usd pledged'], dtype='object')"
-      ]
+      "text/plain": "Index(['goal', 'pledged', 'backers', 'usd pledged'], dtype='object')"
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
